syntax = "proto3";
package register.service;
option go_package = "github.com/ZRothschild/ldp/gen/register";

import "google/api/annotations.proto";
import "common/common.proto"; // 相对路径
import "google/protobuf/any.proto";

message RegisterReq {
  string nickname = 1;
  string password = 2;
  string confirm = 3;
  string email = 4;
  string mobile = 5;

  string username = 17;
  string phone = 6;
  string idCardFront = 7;
  string idCardBack = 8;
  uint64 seniority = 9;
  string profile = 10;
  string location = 11;
  string companyName = 12;
  string avatar = 13;
  string license = 14;
  RegisterType registerType  =15; // 注册类型。1 普通用户 2 企业
  string captcha = 16; // 验证码
  string prefix = 18; // 移动电话前缀
}

enum RegisterType {
  _ = 0;
  User = 1;
  Company = 2;
}

//message RegisterResp {
//  bool success = 1;
//  int64 errorCode =2;
//  string errorMessage = 3;
//  repeated google.protobuf.Any data = 4;
//  common.service.ErrorShowType showType = 5;
//}

service RegisterService {
  rpc Register(RegisterReq) returns ( common.service.CommonResp) {
    option (google.api.http) = {
      post: "/api/v1/user/register"
      body: "*"
    };
  }
}