syntax = "proto3";
package user.service;
option go_package = "github.com/ldp/server/user";

import "google/api/annotations.proto";

message UserReq {
  uint64 userId = 1;
}

message UserResp {
  int32 code = 1;
  string message = 2;
  UserDetail Detail = 3;
  string requestId = 4;
}

message UserDetail {
  string nickname = 1;
  string username = 3;
  string email = 4;
  string mobile = 5;
  string phone = 6;
  string idCardFront = 7;
  string idCardBack = 8;
  uint64 seniority = 9;
  string profile = 10;
  string location = 11;
  string companyName = 12;
  string avatar = 13;
  uint64 companyId = 14;
}

service UserService {
  rpc UserDetail(UserReq) returns (UserResp) {
    option (google.api.http) = {
      post: "/v1/user/detail"
      body: "*"
    };
  }
}